--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -75,7 +75,7 @@
 <body class="home page-template page-template-page-home page-template-page-home-php page page-id-15 responsive-menu-slide-left">
     <div id="page" class="hfeed site">
 
-        <header id="header" class="site-header header-v1" role="banner">
+        <header id="header" class="site-header header-v1" role="banner" style="    background-image: url(images/kenapa.jpg);">
             <div class="header-middle">
                 <div class="container">
                     <div class="row">
@@ -86,24 +86,24 @@
                                     <a href="/"><img src="images/logo.png"  height="50" width="165" alt="Emas Jaya"/></a>
 
                                 </div>
-                                <div class="nxhp">
+                                <div class="col-lg-6 col-md-4 col-sm-4 nxhp">
                                     <nav class="collapse navbar-collapse navbar-ex1-collapse">
                                         <ul id="menu-primary" class="nav navbar-nav">
-                                            <li id="menu-item-4" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4"><a title="Tentang Kami" href="#tentangkami">Tentang Kami</a></li>
-                                            <li id="menu-item-5" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5"><a title="Jenis Pinjaman" href="#jenispinjaman">Jenis Pinjaman</a></li>
+                                            <li id="menu-item-4" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4"><a title="Tentang Kami" href="/#tentangkami">Tentang Kami</a></li>
+                                            <li id="menu-item-5" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5"><a title="Jenis Pinjaman" href="/#jenispinjaman">Jenis Pinjaman</a></li>
                                         </ul>
                                     </nav>
                                 </div>
 
                             </div>
                             <div id="text-3" class="widget widget_text text-center">
-                                <div class="textwidget">
-                                    <div class="tagline">
+                                <div class="textwidget" style="padding-bottom: 150px;">
+                                    <div class="tagline" style="padding-right: 0px; ">
                                         <div class="su-animate" style="visibility:hidden;-webkit-animation-duration:1s;-webkit-animation-delay:0s;animation-duration:1s;animation-delay:0s;" data-animation="fadeInLeft" data-duration="1" data-delay="0">
                                             </p>
                                             <h3 style="text-transform:uppercase;" class="white bold">thank-you</h3>
                                             <p><span class="white"> text</span><br />
-                                                <a class="btn btn-default desktop_view" href="/">backhome</a><a class="btn btn-default mobile_view" href="#enquiryform_mobile">MOHON SEKARANG</a><br />
+                                                <a class="btn btn-default desktop_view" href="/">backhome</a><a class="btn btn-default mobile_view" href="/">backhome</a><br />
                                         </div>
                                     </div>
                                 </div>
