--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -101,8 +101,8 @@
                                     <div class="tagline" style="padding-right: 0px; ">
                                         <div class="su-animate" style="visibility:hidden;-webkit-animation-duration:1s;-webkit-animation-delay:0s;animation-duration:1s;animation-delay:0s;" data-animation="fadeInLeft" data-duration="1" data-delay="0">
                                             </p>
-                                            <h3 style="text-transform:uppercase;" class="white bold">thank-you</h3>
-                                            <p><span class="white"> text</span><br />
+                                            <h3 style="text-transform:uppercase;" class="white bold">Terima Kasih</h3>
+                                            <p><span class="white">Kami akan hubungi anda secepat mungkin</span><br />
                                                 <a class="btn btn-default desktop_view" href="/">backhome</a><a class="btn btn-default mobile_view" href="/">backhome</a><br />
                                         </div>
                                     </div>
