--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                                             </p>
                                             <h3 style="text-transform:uppercase;" class="white bold">PEMBAYARAN BALIK YANG FLEKSIBEL,0% Kadar untuk Pulangan Awal</h3>
                                             <p><span class="white"> (7 hari selepas pinjaman)</span><br />
-                                                <a class="btn btn-default desktop_view" href="#enquiryform">MOHON SEKARANG</a><a class="btn btn-default mobile_view" href="#enquiryform_mobile">MOHON SEKARANG</a><br />
+                                                <a class="btn btn-default desktop_view" href="#enquiryform">MOHON SEKARANG</a><a class="btn btn-default mobile_view" href="#enquiryform">MOHON SEKARANG</a><br />
                                         </div>
                                     </div>
                                 </div>
@@ -111,7 +111,7 @@
                         <div class="col-md-5 nxhp">
                             <div id="text-2" class="widget widget_text">
                                 <div class="textwidget">
-                                    <div id="enquiryform" class="desktop_view">
+                                    <div id="enquiryform">
                                         <div class="gradientbg">
                                             <h1 class="white bold">MOHON SEKARANG</h1>
                                             <p class="white">Sila isi borang berikut dan kami akan menghubungi anda dengan secepat mungkin</p>
@@ -184,20 +184,6 @@
 
                                 <div id="container">
 
-                                    <div class="content">
-                                        <section id="enquiryform_mobile" class="text-center mobile_view">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="col-md-12 nxhp">
-                                                        <div class="gradientbg">
-                                                            <h1 class="white bold">MOHON SEKARANG</h1>
-                                                            <p class="white">Sila isi borang berikut dan kami akan menghubungi anda dengan secepat mungkin</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                    </div>
-                                    </section>
                                     <section id="tentangkami" class="text-center">
                                         <div class="container nvp45">
                                             <div class="row">
@@ -209,7 +195,7 @@
                                                         <p>Oleh yang demikian, kedua-dua pinjaman perniagaan dan pinjaman peribadi kami boleh diselaras untuk memenuhi keperluan anda. Selain itu, kami menawarkan tempoh permulangan selama 5 tahun bagi semua
                                                             jenis skim pinjaman kami. Perunding profesional kami akan menyesuaikan pakej yang sesuai, yang terbaik untuk menyelesaikan masalah kewangan anda. Aliran tunai yang besar kami boleh menyokong
                                                             sehingga berjuta-juta jumlah pinjaman. Kami merupakan pemilihan terbaik untuk membuat permohonan pinjaman wang. Lihatlah kadar faedah kami untuk mendapatkan lebih informasi.</p>
-                                                        <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform_mobile" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
+                                                        <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -262,7 +248,7 @@
                                                             <h3 class="white bold">PINJAMAN PERIBADI</h3>
                                                             <p class="white descp">Pinjaman peribadi ditawarkan untuk pelbagai kegunaan sama ada untuk membiayai kos pembelajaran anak anda, untuk membeli rumah yang anda ingini ataupun untuk apa-apa jua keadaan yang memerlukan
                                                                 sejumlah wang yang besar. Tawaran skim pinjaman kami yang menarik membolehkan anda menikmati kehidupan yang berkualiti.</p>
-                                                            <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform_mobile" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
+                                                            <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -273,7 +259,7 @@
                                                             <h3 class="white bold">PINJAMAN PERNIAGAAN</h3>
                                                             <p class="white descp">Skim pinjaman perniagaan disediakan untuk anda yang berniat untuk memulakan atau mengembangkan perniagaan. Pinjaman ini dapat membantu melancarkan aktiviti perniagaan anda dan seteruskan membolehkan
                                                                 anda menggenggam kecemerlangan.</p>
-                                                            <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform_mobile" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
+                                                            <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -374,7 +360,7 @@
                                                                 <li><i class="fa fa-circle" style="color:#ffffff"></i> Anda akan mendapatkan pinjaman anda melalui pemindahan bank atau wang tunai pada hari yang sama</li>
                                                             </ul>
                                                         </div>
-                                                        <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform_mobile" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
+                                                        <p><a href="#enquiryform" class="btn btn-default desktop_view">MOHON SEKARANG</a><a href="#enquiryform" class="btn btn-default mobile_view">MOHON SEKARANG</a></p>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6 nflex-basis nimg-wrapper">
@@ -452,7 +438,7 @@
             <ul id="responsive-menu" class="">
                 <li id="responsive-menu-item-67" class=" menu-item menu-item-type-custom menu-item-object-custom responsive-menu-item"><a href="#tentangkami" class="responsive-menu-item-link">Tentang Kami</a></li>
                 <li id="responsive-menu-item-68" class=" menu-item menu-item-type-custom menu-item-object-custom responsive-menu-item"><a href="#jenispinjaman" class="responsive-menu-item-link">Jenis Pinjaman</a></li>
-                <li id="responsive-menu-item-69" class=" menu-item menu-item-type-custom menu-item-object-custom responsive-menu-item"><a href="#enquiryform_mobile" class="responsive-menu-item-link">Mohon Sekarang</a></li>
+                <li id="responsive-menu-item-69" class=" menu-item menu-item-type-custom menu-item-object-custom responsive-menu-item"><a href="#enquiryform" class="responsive-menu-item-link">Mohon Sekarang</a></li>
             </ul>
         </div>
     </div>
