--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -121,7 +121,7 @@
                                             </p>
                                             <h3 style="text-transform:uppercase;" class="white bold">Terima Kasih</h3>
                                             <p><span class="white">Kami akan hubungi anda secepat mungkin</span><br />
-                                                <a class="btn btn-default desktop_view" href="/">backhome</a><a class="btn btn-default mobile_view" href="/">backhome</a><br />
+                                                <a class="btn btn-default desktop_view" href="/">Halaman Utama</a><a class="btn btn-default mobile_view" href="/">backhome</a><br />
                                         </div>
                                     </div>
                                 </div>
