--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -21,7 +21,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11" />
 
-    <title>Emas Jaya |</title>
+    <title>Emas Jaya | Pinjaman Online Terpantas</title>
+    <meta name="description" content="Pinjaman Peribadi dan Pinjaman Perniagaan di seluruh Malaysia. Gaji bersih dan senarai hitam boleh meminjam. Mohon online sekarang!">
 
     <!-- All in One SEO Pack 2.4.3.1 by Michael Torbert of Semper Fi Web Design[528,544] -->
     <link rel="canonical" href="index.html" />
@@ -88,9 +89,22 @@
       src="https://www.facebook.com/tr?id=2059739154315798&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117322804-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117322804-1');
+    </script>
+
 </head>
 
 <body class="home page-template page-template-page-home page-template-page-home-php page page-id-15 responsive-menu-slide-left">
+
+
     <div id="page" class="hfeed site">
 
         <header id="header" class="site-header header-v1" role="banner" style="    background-image: url(images/kenapa.jpg);">
